--- a/DSP_Frontend/src/index.css
+++ b/DSP_Frontend/src/index.css
@@ -32,17 +32,26 @@
     box-sizing: border-box;
 }
 
-.buildingImage-container {
-    display: block;
-    padding-left: 64px;
-    padding-right: 64px;
-    padding-bottom: 64px;
-    padding-top: 64px;
-    align-items: flex-start;
-    justify-content: center;
+.imageGraph-container {
+    display: flex; 
+    width: 100%; 
+    gap: 32px;
     box-sizing: border-box;
-    flex-wrap: wrap;
-    width: 50%;
+    padding: 64px;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.buildingImage-container {
+    flex: 1; 
+    max-width: 50%;
+    box-sizing: border-box; 
+}
+
+.energySavingsGraph-container {
+    flex: 1; 
+    max-width: 50%;
+    box-sizing: border-box;
 }
 
 .subHeaderElement-container {
@@ -101,6 +110,7 @@
     max-width: 32%;
     box-sizing: border-box;
 }
+
 
 
 
